# IITM-PDSA

./: .gitignore  README.md  a.txt  testing_latex.ipynb
additional_concepts/: bitwise.py  bitwise_operations.md  optimization_techniques.md
additional_concepts/recursion_n_backtracking/: 1_recusion_n_backtracking_concepts.ipynb  2_recusion_arrays.ipynb  recusion_n_backtracking_concepts.ipynb  tower_of_hanoi.py
my_packages/Performance/: Performance.py  README.md  pyproject.toml
week_1/: check.py  grpa1.py  grpa2.py  grpa3.py  live_coding_1.py  live_coding_2.py  live_coding_3.py  modules.py  test_week_1.py  w1_class.py  w1_gcd.py  w1_primes.py
week_2/: L1.md  grpa1.py  grpa2.py  grpa3.py  lecture_1.md  lecture_2.md  lecture_3.ipynb  lecture_3.md  live_coding_1.py  live_coding_2.py  live_coding_3.py  live_coding_4.py  test.md  test_week_2.py
week_2/algos/: binary_search.py  dfs.py  insertion_sort.py  linked_list.py  merge_sort.py  quick_sort.py  selection_sort.py
week_3/: live_coding_1.py  live_coding_2.py  live_coding_3.py  test_week3.py
week_3/algos/: merge_sort.py  quick_sort.py
week_4/: BFS.ipynb  BFS_n_DFS_applications.ipynb  DAG.ipynb  adjacency_m.py  dfs.ipynb  img.md  readme.md  tempCodeRunnerFile.ipynb
week_4/algos/: bfs.py  dfs.py
week_5/: bellman_ford.ipynb  dijkstras.ipynb  floyd_warshall.ipynb  week_5_PPA_2.py
